--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,25 @@
 {
+	"autoload": {
+		"files": [
+			"registration.php"
+		],
+		"psr-4": {
+			"LiveChat\\LiveChat\\": ""
+		}
+	},
+	"license": [
+		"OSL-3.0",
+		"AFL-3.0"
+	],
 	"name": "livechat/module-magento-livechat",
+	"repositories": [
+		{
+			"type": "composer",
+			"url": "https://repo.magento.com/"
+		}
+	],
 	"require": {
-	"php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0|~7.3.0|~7.4.0",
+		"php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0|~7.3.0|~7.4.0",
 		"magento/module-store": "100.*|101.*",
 		"magento/module-customer": "100.*|101.*|102.*|103.*",
 		"magento/module-checkout": "100.*",
@@ -11,17 +29,5 @@
 		"magento/framework": "100.*|101.*|102.*|103.*"
 	},
 	"type": "magento2-module",
-	"version": "2.3.2",
-	"license": [
-		"OSL-3.0",
-		"AFL-3.0"
-	],
-	"autoload": {
-		"files": [
-			"registration.php"
-		],
-		"psr-4": {
-			"LiveChat\\LiveChat\\": ""
-		}
-	}
+	"version": "2.3.2"
 }
